--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,80 +15,81 @@
         </a> -->
         <a href="index.html">WebStudio</a>
         <ul>
-          <li><a href="index.html">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="index.html">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <ul>
         <li>
           <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
     <main>
       <!-- Герой -->
       <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <!-- Вказую заголовок але в завданні на макеті він відсутній, вподальшому його потрібно сховати від користувача -->
-        <h2>Особливості</h2>
+        <h2>Features</h2>
         <ul>
           <li>
-            <h3>Увага до деталей</h3>
+            <h3>Strategy</h3>
             <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h3>Punctuality</h3>
             <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3>Diligence</h3>
             <p>
-              Так само консультація з широким активом значною мірою зумовлює.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h3>Technologies</h3>
             <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
-              src="./images/leptop.jpg"
-              alt="Компьютер"
+              src="./images1/computer.jpg"
+              alt="Сomputer"
               width="370"
               height="294"
             />
           </li>
           <li>
             <img
-              src="./images/phone.jpg"
-              alt="Смартфон"
+              src="./images1/messengers.jpg"
+              alt="Messengers"
               width="370"
               height="294"
             />
           </li>
           <li>
             <img
-              src="./images/tablet.jpg"
-              alt="Планшет"
+              src="./images1/smartphone.jpg"
+              alt="Smartphone"
               width="370"
               height="294"
             />
@@ -96,46 +97,46 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="./images/demyanenko.jpg"
+              src="./images1/guerrero.jpg"
               alt="demyanenko"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/repina.jpg"
+              src="./images1/ford.jpg"
               alt="repina"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/tarasov.jpg"
+              src="./images1/garcia.jpg"
               alt="tarasov"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/yermakov.jpg"
+              src="./images1/wilson.jpg"
               alt="yermakov"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -145,22 +146,10 @@
     <footer>
       <!-- <img src="./images/WebStudio.svg" alt="Лого вебстудии" /> -->
       <a href="index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/s2ZkKpDz2wSU5zVp6"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
