--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студія</title>
+    <title>Studio</title>
   </head>
   <body>
     <!-- Шапка сайту -->
@@ -73,7 +73,7 @@
           <li>
             <img
               src="./images1/computer.jpg"
-              alt="Сomputer"
+              alt="computer"
               width="370"
               height="294"
             />
@@ -81,7 +81,7 @@
           <li>
             <img
               src="./images1/messengers.jpg"
-              alt="Messengers"
+              alt="messengers"
               width="370"
               height="294"
             />
@@ -89,7 +89,7 @@
           <li>
             <img
               src="./images1/smartphone.jpg"
-              alt="Smartphone"
+              alt="smartphone"
               width="370"
               height="294"
             />
@@ -102,7 +102,7 @@
           <li>
             <img
               src="./images1/guerrero.jpg"
-              alt="demyanenko"
+              alt="guerrero"
               width="270"
               height="260"
             />
@@ -110,19 +110,14 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images1/ford.jpg"
-              alt="repina"
-              width="270"
-              height="260"
-            />
+            <img src="./images1/ford.jpg" alt="ford" width="270" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
               src="./images1/garcia.jpg"
-              alt="tarasov"
+              alt="garcia"
               width="270"
               height="260"
             />
@@ -132,7 +127,7 @@
           <li>
             <img
               src="./images1/wilson.jpg"
-              alt="yermakov"
+              alt="wilson"
               width="270"
               height="260"
             />
